fix-img-size
*Fixed distorted image issues

--- a/deallo/css/stylesheet.css
+++ b/deallo/css/stylesheet.css
@@ -154,8 +154,20 @@ body#loginpg {
 }
 
 .productImg {
-	width: 200px;
-	margin: 2px;
+	/**width: 200px;
+	max-width: 200px;
+	max-height: 200px;*/
+	/*height: 100%;
+	width: 100%;
+	max-width: 200px;
+	margin: 2px;*/
+	max-height: 100%;
+	max-width: 100%;
+}
+
+.media-object {
+	max-height: 100%;
+	max-width: 100%;
 }
 
 /*-- Product list / My products page #42bbb1--*/
